# AudioPlayer

./: settings.gradle
app/: build.gradle  public.txt
app/src/androidTest/java/com/example/audioplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioPacketQueue.cpp  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  SLManager.cpp  audio_player_jni.cpp
app/src/main/java/com/example/audioplayer/: AudioPlayer.java  BaseApplication.java  MainActivity.java  Song.java
app/src/main/java/com/example/audioplayer/bean/: Song.java  TimeMetaData.java
app/src/main/java/com/example/audioplayer/enums/: SoundChannel.java
app/src/main/res/drawable/: selector_play_checkbox_bg.xml
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
player/: build.gradle
player/src/androidTest/java/com/example/player/: ExampleInstrumentedTest.java
player/src/main/cpp/: AudioPacketQueue.cpp  AudioPacketQueue.h  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  SLManager.h  audio_player_jni.cpp  log_define.h
player/src/main/java/com/example/player/: AudioPlayer.java
player/src/main/java/com/example/player/bean/: TimeMetaData.java
player/src/main/java/com/example/player/enums/: SoundChannel.java
